# railtracks-shipyard

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/agent-builder/: SKILL.md
competition/: COMPETITION.md
competition/code_track/: agent.py
competition/prompt_track/: config.yaml  run.py
examples/: naive_agent.py
server/: index.html  scores.json  server.py
src/railtracks_shipyard/: __init__.py  dashboard.py
src/railtracks_shipyard/game_engine/: __init__.py  _llm.py  _models.py  _npc.py  _price_engine.py  _session.py  _tools.py
tests/: test_game_engine.py
