[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "railtracks-shipyard"
version = "0.2.0"
description = "Switchyard game engine for the Railtracks Workshop market simulation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "railtracks>=1.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
